# glouglou

./: .gitignore  Cargo.toml  build-guide.md
src/: main.rs
src/config/: generic.rs
src/email/: send.rs
src/routes/: access_ok.rs  mod.rs  ping.rs  send.rs
src/utils/: fs.rs  log.rs  mod.rs  router.rs
src/utils/api_keys/: gen.rs  load.rs  mod.rs  setup.rs
src/web/: http.rs  mod.rs  server.rs
src/web/utils/: mod.rs  request.rs  response.rs  uri.rs
