[package]
name = "glouglou"
version = "1.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
chrono = "0.4.24"
lazy-regex = "2.5.0"
lettre = { version = "0.10.4", features = ["builder", "dkim", "smtp-transport"] }
rand = "0.8.5"
serde = "1.0.160"
serde_derive = "1.0.160"
tokio = { version = "1", features = ["full"] }
toml = "0.7.3"
